// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15it19w {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-15it19w[aria-disabled='false'],
.cache-15it19w[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-15it19w[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-15it19w[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true']>label,
.cache-15it19w[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.cache-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-16otux ehpbis70"
    >
      <div
        aria-disabled="false"
        class="cache-15it19w ehkrmld2"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1dt4s2g ehkrmld3"
          id="test-test"
          name="test"
          type="radio"
          value="test"
        />
        <svg
          class="cache-1ijwlua ehkrmld4"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld6"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld5"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-82a6rk ehkrmld1"
          for="test-test"
        >
          Radio field
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15it19w {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-15it19w[aria-disabled='false'],
.cache-15it19w[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-15it19w[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-15it19w[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true']>label,
.cache-15it19w[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.cache-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-16otux ehpbis70"
    >
      <div
        aria-disabled="false"
        class="cache-15it19w ehkrmld2"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-1dt4s2g ehkrmld3"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-1ijwlua ehkrmld4"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld6"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld5"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-82a6rk ehkrmld1"
          for="test-checked"
        >
          Radio field checked
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15it19w {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-15it19w[aria-disabled='false'],
.cache-15it19w[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-15it19w[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-15it19w[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true']>label,
.cache-15it19w[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.cache-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-16otux ehpbis70"
    >
      <div
        aria-disabled="true"
        class="cache-15it19w ehkrmld2"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1dt4s2g ehkrmld3"
          disabled=""
          id="test-disabled"
          name="test"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-1ijwlua ehkrmld4"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld6"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld5"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-82a6rk ehkrmld1"
          for="test-disabled"
        >
          Radio field disabled
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15it19w {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-15it19w[aria-disabled='false'],
.cache-15it19w[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-15it19w[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-15it19w:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-15it19w[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true']>label,
.cache-15it19w[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-15it19w[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.cache-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-16otux ehpbis70"
    >
      <div
        aria-disabled="false"
        class="cache-15it19w ehkrmld2"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1dt4s2g ehkrmld3"
          id="test-events"
          name="test"
          type="radio"
          value="events"
        />
        <svg
          class="cache-1ijwlua ehkrmld4"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-0 ehkrmld6"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-0 ehkrmld5"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-82a6rk ehkrmld1"
          for="test-events"
        >
          Radio field events
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
